--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>问卷星球</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.3&key=096748afcd44f7a9939d2065057b26ef"></script>
   </head>
   <body>
     <noscript>
